Add an extra butto for the admin :

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -5,6 +5,8 @@
 		<br>
 		<br>
 		<button><%= link_to "Add a document", new_document_path %></button>
-		
+		<br>
+		<br>
+		<button><%= link_to "All groups", groups_path %></button>
 
 </div>
