--- a/app/views/documents/edit.html.erb
+++ b/app/views/documents/edit.html.erb
@@ -1,1 +1,9 @@
 <h1>Edit a Manual Here</h1>
+
+
+<textarea rows="20" cols="50">
+  <%=@document.content %>
+</textarea>
+<br>
+<br>
+<%= link_to 'Back', 'javascript:history.go(-1);' %>
