--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -1,1 +1,7 @@
 <h1>Educate yourself!</h1>
+
+
+<%=@document.content %>
+<br>
+<br>
+<%= link_to 'Back', 'javascript:history.go(-1);' %> | <%= link_to 'Edit', edit_document_path %>
