Add it a group controller

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class="container">
 	<%@groups.each do |group| %>
-	<p><%=group.group_type%></p>
+	<a href="groups/<%=group.id%>"><p><%=group.group_type%></p>
 	<% end %> 
 </div>
