--- a/app/views/documents/new.html.erb
+++ b/app/views/documents/new.html.erb
@@ -1,1 +1,7 @@
-<h1>add a Manual</h1>
+<h1>Create a New Document</h1>
+
+<%= form_for @document do |f|%>
+  <%= f.text_field :title %>
+  <%= f.text_area :content, :class => 'document'%>
+  <%= f.submit "Create" %>
+<% end %>
