--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,5 +1,7 @@
 <div class="container">
  <%@users.each do |user| %>
-	 <p>Name:    <%=user.username %></p>
+	<p>Name:    <%=user.username %></p>
+	 <button><%=link_to "Edit a user", edit_user_path %></button>
+	 	<hr>
 	  <% end %> 
 </div>
