the start of css

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,7 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+ *= require rails_bootstrap_forms
  *= require_tree .
  *= require_self
  */
@@ -18,4 +19,9 @@
   width: 600px;
   padding: 0px 20px 20px 20px;
 
+}
+
+.main-back {
+  background-image: url("dog.jpg");
+  background-size: cover;
 }
