--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,10 @@
 <h1>Create A New User!</h1>
 
-<%= form_for :user, url: '/users' do |f| %>
+<%= bootstrap_form_for :user, url: '/users' do |f| %>
 
-  Username: <%= f.text_field :username %>
-  Password: <%= f.password_field :password %>
-  Password Confirmation: <%= f.password_field :password_confirmation %>
+   <%= f.text_field :username %>
+   <%= f.password_field :password %>
+   <%= f.password_field :password_confirmation %>
   <%= f.submit "Submit" %>
 
 <% end %>
