--- a/app/views/documents/edit.html.erb
+++ b/app/views/documents/edit.html.erb
@@ -1,9 +1,9 @@
 <h1>Edit this Document</h1>
 
 <div>
-  <%= form_for @document, method: :put do |f|%>
-    <%= f.label :title %>
+  <%= bootstrap_form_for @document, method: :put do |f|%>
     <%= f.text_field :title %>
+    <%= f.collection_select :group_id, Group.all, :id, :group_type%>
     <%= f.text_area :content, :class => 'document'%>
     <%= f.submit "Update" %>
   <% end %>
