--- a/app/views/documents/new.html.erb
+++ b/app/views/documents/new.html.erb
@@ -1,7 +1,6 @@
 <h1>Create a New Document</h1>
 <div>
-  <%= form_for @document do |f|%>
-    <%= f.label :title %>
+  <%= bootstrap_form_for @document do |f| %>
     <%= f.text_field :title %>
     <%= f.collection_select :group_id, Group.all, :id, :group_type, prompt: true %>
     <%= f.text_area :content, :class => 'document'%>
