--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,12 +1,9 @@
-<div class="container">
-
-	
-		<button><%= link_to "Add a user",signup_path %></button>
-		<br>
-		<br>
-		<button><%= link_to "Add a document", new_document_path %></button>
-		<br>
-		<br>
-		<button><%= link_to "All groups", groups_path %></button>
-
+<div class="wrapper">
+	<button><%= link_to "Add a user", signup_path %></button>
+	<br>
+	<br>
+	<button><%= link_to "Add a document", new_document_path %></button>
+	<br>
+	<br>
+	<button><%= link_to "All groups", groups_path %></button>
 </div>
