Add checkbox button to documents

--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -2,4 +2,9 @@
 <div>
   <%= @document.content.html_safe %><br>
   <%= link_to 'Edit', edit_document_path %>
+  <% if @completed %>
+    <%= button_to "Checked", {action: "check", id: @document.id} %>
+  <% else %>
+    <%= button_to "Empty", {action: "check", id: @document.id} %>
+  <% end %>
 </div>
