Fix group selection on new user

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,7 +3,12 @@
 <%= bootstrap_form_for :user, url: '/users' do |f| %>
   <%= f.text_field :username %>
   <%= f.password_field :password %>
-  <%= f.collection_select :group_id, Group.all, :id, :group_type, prompt: true %>
+  <select class="form-control" name="group_id">
+    <option value="">Please select</option>
+    <% Group.all.each do |group| %>
+      <option value="<%= group.id %>"><%= group.group_type %></option>
+    <% end %>
+  </select>
   <%= f.check_box :admin, {}, true, false %>
   <%= f.submit "Submit" %>
 <% end %>
