--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,7 +1,6 @@
-
 <div class="container">
-	<%@groups.each do |group| %>
-	
-	<a href="groups/<%=group.id%>"><p><%=group.group_type%></p>
-	<% end %> 
+  <%@groups.each do |group| %>
+  <a href="groups/<%=group.id%>"><p><%=group.group_type%></p>
+  <% end %>
 </div>
+<img style="float:left; padding-right:10px;padding-top:10px;" src="http://www.wall321.com/thumbnails/detail/20120706/funny%20horses%20white%20background%201024x768%20wallpaper_www.wall321.com_16.jpg">
