--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,3 +25,25 @@
   background-image: url("dog.jpg");
   background-size: cover;
 }
+
+.item-div {
+  padding:       20px;
+  display:inline-block;
+  margin-right: 20px;
+}
+
+h1 {
+  display: inline-block;
+}
+
+ul {
+  list-style: none;
+}
+
+.fix{
+    position:fixed;
+    bottom:0px;
+    left:50%;
+    }
+
+
