--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,33 +1,46 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>DBCVet</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-  <script src='https://cdn.tinymce.com/4/tinymce.min.js'></script>
-</head>
-<body>
-
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="/">DBC Vets</a>
-    </div>
-    <ul class="nav navbar-nav navbar-right">
-    <% if current_user %>
-      Signed in as <%= current_user.username %> | <%= link_to "Logout", '/logout' %>
-    <% end %>
-      <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-    </ul>
+  <head>
+    <title>DBCVet</title>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <script src='https://cdn.tinymce.com/4/tinymce.min.js'></script>
+  </head>
+  <center>
+  <body>
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href=#>DBC Vets</a>
+        </div>
+        <ul class="nav navbar-nav navbar-right">
+          <% if current_user %>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+          </ul>
+          <% else %>
+          <li><a href="/logout"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+          <% end %>
+        </ul>
+        <div class="collapse navbar-collapse" id="myNavbar">
+          <ul class="nav navbar-nav">
+            <% if admin? %>
+            <li><a href="/admin">Admin Dashboard</a></li>
+            <li><a href="/groups">Groups</a></li>
+            <% end %>
+            <% if current_user %>
+            <li><a href="/documents">Documents</a></li>
+            <% end %>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- <div class="col-md-4 col-md-offset-4"> -->
+    <%= yield %>
   </div>
-</nav>
-
-
-<div class="col-md-4 col-md-offset-4">
-<%= yield %>
-</div>
 </div>
 </body>
+</center>
 </html>
