--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,6 @@
-<%=form_for @user, method: :put do |f| %>
-	<%=f.label :username %>
+<div class="col-md-4 col-md-offset-4">
+
+<%=bootstrap_form_for @user, method: :put do |f| %>
 	<%=f.text_field :username %>
 	<%=f.submit "Edit a user" %>
-<% end %> 
+<% end %>
