--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+	<button><%=link_to "Add a user", new_group_users_group_path(@group) %></button>
  <%@users.each do |user| %>
 	<button><%=link_to "Edit a user", edit_user_path(user) %></button><p>Name:    <%=user.username %></p>
 	  <% end %> 
