--- a/app/views/documents/show.html.erb
+++ b/app/views/documents/show.html.erb
@@ -1,13 +1,19 @@
 <h1>Educate yourself!</h1>
 <br>
+<br>
 <div>
   <%= @document.content.html_safe %>
   <br>
   <br>
   <%= link_to 'Edit', edit_document_path %>
+  <br>
+  <br>
   <% if @completed %>
     <%= button_to "Checked", {action: "check", id: @document.id} %>
   <% else %>
     <%= button_to "Empty", {action: "check", id: @document.id} %>
   <% end %>
 </div>
+<br>
+<br>
+<a href="javascript: history.go(-1)">Back</a>
